--- a/pre-processing.ipynb
+++ b/pre-processing.ipynb
@@ -5,16 +5,25 @@
    "execution_count": 1,
    "id": "64d81448",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2.2\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "\n",
-    "\n",
-    "from sklearn.preprocessing import OneHotEncoder"
+    "import sklearn\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "print(sklearn.__version__)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9ae3fc2b",
    "metadata": {},
@@ -26,17 +35,45 @@
     "For string data that seems to be ordered, we'll use **[ordinal encoding](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.OrdinalEncoder.html#sklearn.preprocessing.OrdinalEncoder)** to convey that this information has an order to it.\n",
     "\n",
     "For string data that doesn't seem to be ordered, we'll use **[one-hot encoding](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.OneHotEncoder.html#sklearn.preprocessing.OneHotEncoder)** so the model doesn't interpret these features as having an order.\n",
-    "\n",
     "* Note that OneHotEncoder() by default sorts String categorical features alphabetically\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Differentiating Ordered vs Unordered Features\n",
     "\n",
     "**ordered string features: f3, f11**\n",
     "\n",
-    "**unordered string features: f1, f5, f7, f9, f16** (some of these could technically be considered ordered... but I didn't think they were)"
+    "**unordered string features: f1, f5, f7, f9, f16** (some of these could technically be considered ordered... but I didn't think they were)\n",
+    "\n",
+    "\n",
+    "### Observation\n",
+    "\n",
+    "For the features which are one-hot encoded, we can actually drop one category while keeping the same amount of information!\n",
+    "\n",
+    "example:\n",
+    "```python\n",
+    "f1_Bird  | f1_Cat  | f1_Dog\n",
+    "   0          1         0\n",
+    "   1          0         0\n",
+    "   0          0         1\n",
+    "\n",
+    "becomes\n",
+    "\n",
+    "f1_Cat  | f1_Dog\n",
+    "\n",
+    "   1         0\n",
+    "   0         0\n",
+    "   0         1\n",
+    "```\n",
+    "Then in the second row, this would imply that f1_Bird is 1. This allows us to delete 5 of the one-hot encoded features!\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "2fb0664a",
    "metadata": {},
    "outputs": [
@@ -44,33 +81,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     f1_Bird  f1_Cat  f1_Dog   f2  f4  f5_Blue  f5_Green  f5_Red   f6  \\\n",
-      "0        0.0     1.0     0.0  0.6   4      1.0       0.0     0.0 -2.1   \n",
-      "1        0.0     1.0     0.0 -0.6   2      0.0       1.0     0.0 -2.2   \n",
-      "2        0.0     0.0     1.0 -0.6   3      0.0       0.0     1.0 -1.4   \n",
-      "3        0.0     1.0     0.0  0.7   1      0.0       1.0     0.0 -1.9   \n",
-      "4        0.0     0.0     1.0  1.4   4      0.0       0.0     1.0 -2.4   \n",
-      "..       ...     ...     ...  ...  ..      ...       ...     ...  ...   \n",
-      "995      0.0     1.0     0.0 -0.0   1      0.0       1.0     0.0 -1.1   \n",
-      "996      0.0     1.0     0.0 -0.6   3      1.0       0.0     0.0 -1.1   \n",
-      "997      0.0     0.0     1.0 -0.3   4      0.0       1.0     0.0 -2.9   \n",
-      "998      0.0     0.0     1.0  1.5   4      1.0       0.0     0.0 -2.2   \n",
-      "999      1.0     0.0     0.0 -1.6   2      0.0       0.0     1.0 -1.7   \n",
+      "     f1_Cat  f1_Dog   f2  f3  f4  f5_Green  f5_Red   f6  f7_No  f7_Yes  ...  \\\n",
+      "0       1.0     0.0  0.6   0   4       0.0     0.0 -2.1    0.0     1.0  ...   \n",
+      "1       1.0     0.0 -0.6   2   2       1.0     0.0 -2.2    0.0     0.0  ...   \n",
+      "2       0.0     1.0 -0.6   1   3       0.0     1.0 -1.4    0.0     0.0  ...   \n",
+      "3       1.0     0.0  0.7   0   1       1.0     0.0 -1.9    1.0     0.0  ...   \n",
+      "4       0.0     1.0  1.4   1   4       0.0     1.0 -2.4    1.0     0.0  ...   \n",
+      "..      ...     ...  ...  ..  ..       ...     ...  ...    ...     ...  ...   \n",
+      "995     1.0     0.0 -0.0   1   1       1.0     0.0 -1.1    1.0     0.0  ...   \n",
+      "996     1.0     0.0 -0.6   2   3       0.0     0.0 -1.1    1.0     0.0  ...   \n",
+      "997     0.0     1.0 -0.3   0   4       1.0     0.0 -2.9    0.0     1.0  ...   \n",
+      "998     0.0     1.0  1.5   0   4       0.0     0.0 -2.2    0.0     0.0  ...   \n",
+      "999     0.0     0.0 -1.6   2   2       0.0     1.0 -1.7    0.0     1.0  ...   \n",
       "\n",
-      "     f7_Maybe  ...  f10  f12  f13  f14  f15  f17  f18  f19  f20  target  \n",
-      "0         0.0  ... -0.8  6.6  0.5  1.2    1 -0.0 -1.7 -1.5  1.2       0  \n",
-      "1         1.0  ...  0.3  3.9 -0.1 -0.1    1 -0.2 -1.6 -0.3  2.4       1  \n",
-      "2         1.0  ... -0.5  3.4  0.6 -0.1    0 -0.7  0.9  0.1  2.4       1  \n",
-      "3         0.0  ... -0.7  5.0  1.5  0.7    1  0.5 -2.0  1.0  5.0       1  \n",
-      "4         0.0  ... -0.1  4.7 -0.2 -1.1    0 -1.5  1.0  0.5  2.9       1  \n",
-      "..        ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...     ...  \n",
-      "995       0.0  ... -1.2  6.6 -0.3  0.8    1  1.9  0.9 -2.4  2.9       0  \n",
-      "996       0.0  ... -2.3  4.4  1.8 -0.6    0  0.2 -0.6 -0.0  4.8       0  \n",
-      "997       0.0  ... -1.0  4.4  0.6  2.0    0 -0.7 -1.8  0.5  3.0       0  \n",
-      "998       1.0  ... -0.2  6.6 -0.6  0.1    0 -0.2  1.9  0.5  2.4       0  \n",
-      "999       0.0  ...  2.6  5.7  0.6 -1.2    0  0.4 -0.8  0.6  4.6       1  \n",
+      "     f11  f12  f13  f14  f15  f17  f18  f19  f20  target  \n",
+      "0      2  6.6  0.5  1.2    1 -0.0 -1.7 -1.5  1.2       0  \n",
+      "1      1  3.9 -0.1 -0.1    1 -0.2 -1.6 -0.3  2.4       1  \n",
+      "2      2  3.4  0.6 -0.1    0 -0.7  0.9  0.1  2.4       1  \n",
+      "3      1  5.0  1.5  0.7    1  0.5 -2.0  1.0  5.0       1  \n",
+      "4      0  4.7 -0.2 -1.1    0 -1.5  1.0  0.5  2.9       1  \n",
+      "..   ...  ...  ...  ...  ...  ...  ...  ...  ...     ...  \n",
+      "995    1  6.6 -0.3  0.8    1  1.9  0.9 -2.4  2.9       0  \n",
+      "996    1  4.4  1.8 -0.6    0  0.2 -0.6 -0.0  4.8       0  \n",
+      "997    2  4.4  0.6  2.0    0 -0.7 -1.8  0.5  3.0       0  \n",
+      "998    2  6.6 -0.6  0.1    0 -0.2  1.9  0.5  2.4       0  \n",
+      "999    0  5.7  0.6 -1.2    0  0.4 -0.8  0.6  4.6       1  \n",
       "\n",
-      "[1000 rows x 29 columns]\n"
+      "[1000 rows x 26 columns]\n"
      ]
     }
    ],
@@ -82,17 +119,18 @@
     "# manually doing ordinal encoding for f3, f11\n",
     "f3_mapping = {\"Low\":0, \"Medium\":1, \"High\":2}\n",
     "train[\"f3\"] = train[\"f3\"].map(f3_mapping)\n",
-    "# print(train[\"f3\"])\n",
+    "test[\"f3\"] = test[\"f3\"].map(f3_mapping)\n",
     "\n",
     "f11_mapping = {\"Basic\":0, \"Standard\":1, \"Premium\":2}\n",
     "train[\"f11\"] = train[\"f11\"].map(f11_mapping)\n",
+    "test[\"f11\"] = test[\"f11\"].map(f11_mapping)\n",
     "# print(train[\"f11\"])\n",
     "\n",
     "\n",
     "# Implementing one-hot encoding with sklearn for f1, f5, f7, f9, f16\n",
     "# NOTE: for however many categories there are in a feature (for example, f1 has 3 categories: Bird, Cat, Dog),\n",
     "#  We'll need to add this amount of columns. For example, f1 gets turned into 3 feature columns after one-hot encoding\n",
-    "one_hot = OneHotEncoder(sparse_output = False)\n",
+    "one_hot = OneHotEncoder(sparse_output=False)\n",
     "    \n",
     "# print(train[\"f1\"])\n",
     "\n",
@@ -162,8 +200,12 @@
     "\n",
     "\n",
     "# need to now remove the original string categorical data\n",
-    "train = train.drop(columns=[\"f1\", \"f3\", \"f5\", \"f7\", \"f9\", \"f11\", \"f16\"])\n",
-    "test = test.drop(columns=[\"f1\", \"f3\", \"f5\", \"f7\", \"f9\", \"f11\", \"f16\"])\n",
+    "train = train.drop(columns=[\"f1\", \"f5\", \"f7\", \"f9\", \"f16\"])\n",
+    "test = test.drop(columns=[\"f1\", \"f5\", \"f7\", \"f9\", \"f16\"])\n",
+    "\n",
+    "# now removing a single category feature from each one-hot encoded feature.\n",
+    "train = train.drop(columns=[\"f1_Bird\", \"f5_Blue\", \"f7_Maybe\", \"f9_X\", \"f16_A\"])\n",
+    "test = test.drop(columns=[\"f1_Bird\", \"f5_Blue\", \"f7_Maybe\", \"f9_X\", \"f16_A\"])\n",
     "\n",
     "print(train)\n",
     "\n",
@@ -206,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
